fix: adjust margin for nested list items in footer for improved alignment

--- a/css/structure.css
+++ b/css/structure.css
@@ -53,7 +53,7 @@ a {
 }
 
 li ul li {
-  margin-left: 10px;
+  margin-left: 0px;
 }
 
 /* --- Hamburger menu functionaliteit (mobile) --- */
